# cs50_airlines

./: .gitignore  README.md  pyproject.toml
airline/: populate_db.py
airline/airline/: asgi.py  settings.py  urls.py  wsgi.py
airline/flights/: admin.py  models.py  urls.py  views.py
airline/flights/migrations/: 0001_initial.py  0002_auto_20210818_2051.py  0003_passenger.py
airline/flights/templates/flights/: flight.html  index.html  layout.html
airline/users/: urls.py  views.py
airline/users/templates/users/: login.html  user.html
