[tool.poetry]
name = "testes_django"
version = "0.1.0"
description = ""
authors = ["William Foschiera <wfoschiera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
django-admin = "^2.0.1"
pandas = "^1.3.2"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
